# OpenSource_software

./: .gitignore  CLAUDE_CODE_INSTRUCTIONS.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image_processor.cpp  image_processor.h  native_lib.cpp
app/src/main/java/com/example/applicationtest/: MainActivity.kt
app/src/main/java/com/example/applicationtest/alert/: TTSManager.kt  VibrationManager.kt
app/src/main/java/com/example/applicationtest/camera/: FrameAnalyzer.kt
app/src/main/java/com/example/applicationtest/danger/: DangerEvaluator.kt
app/src/main/java/com/example/applicationtest/detector/: DetectionResult.kt  NativeLib.kt  ObjectTracker.kt  YoloDetector.kt
app/src/main/java/com/example/applicationtest/ui/: OverlayView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
